@@ -1,3 +1,13 @@
+commit fe73c5d9a0519919c0dc2e0afe480da713ce9c58
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Sun Nov 29 13:53:24 2009 +0900
+
+    aufs: bugfix, max namelen
+    
+    Test the length of a name even if udba=none.
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 0fe8b8a19551e82531c1ba448960641e7a3ccda3
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Wed Nov 25 17:43:07 2009 +0900
